// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemBankViewer matches snapshot 1`] = `
<div
  className="section revisions-items"
>
  <RevisionContainer
    onRevisionSelect={[Function]}
    revisions={Array []}
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    className="section item-map-iframe"
  >
    <ItemViewerFrame
      title="item viewer"
    />
  </div>
</div>
`;

exports[`ItemBankViewer with all props defined matches snapshot 1`] = `
<div
  className="section revisions-items"
>
  <RevisionContainer
    onRevisionSelect={[Function]}
    revisions={
      Array [
        Object {
          "author": "Troy",
          "commitHash": "asdh49",
          "commitMessage": "test",
          "date": 2018-03-06T21:16:15.383Z,
        },
      ]
    }
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    className="section item-map-iframe"
  >
    <div
      aria-label="Toolbar with button groups"
      className="item-nav"
      role="toolbar"
    >
      <div
        aria-label="First group"
        className="item-nav-left-group"
        role="group"
      >
        <AdvancedAboutItem
          bankKey="3000"
          itemKey="187"
          revision="hello"
          section="math"
        />
      </div>
      <div
        className="nav-buttons"
      >
        <button
          className="btn btn-link previous"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="nav-button-container"
          >
            <span
              aria-hidden="true"
              className="fa fa-arrow-left"
            />
            <div
              className="nav-item-link"
            >
              <div>
                Previous
              </div>
              <div
                className="nav-item-name"
              >
                3000-187
              </div>
            </div>
          </div>
        </button>
        <button
          className="btn btn-link next"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="nav-button-container"
          >
            <span
              aria-hidden="true"
              className="fa fa-arrow-right"
            />
            <div
              className="nav-item-link"
            >
              <div>
                Next
              </div>
              <div
                className="nav-item-name"
              >
                3000-187
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        aria-label="Second group"
        className="item-nav-right-group"
        role="group"
      >
        <ItemAccessibilityModal
          accResourceGroups={
            Array [
              Object {
                "accessibilityResources": Array [],
                "label": "none",
                "order": 1,
              },
            ]
          }
          onReset={[Function]}
          onSave={[Function]}
        />
      </div>
    </div>
    <ItemViewerFrame
      title="item viewer"
    />
  </div>
</div>
`;

exports[`ItemBankViewer with revision model and accResourceGroup matches snapshot 1`] = `
<div
  className="section revisions-items"
>
  <RevisionContainer
    onRevisionSelect={[Function]}
    revisions={Array []}
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    className="section item-map-iframe"
  >
    <div
      aria-label="Toolbar with button groups"
      className="item-nav"
      role="toolbar"
    >
      <div
        aria-label="First group"
        className="item-nav-left-group"
        role="group"
      >
        <AdvancedAboutItem
          bankKey="3000"
          itemKey="187"
          revision="hello"
          section="math"
        />
      </div>
      <div
        className="nav-buttons"
      >
        <button
          className="btn btn-link previous"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="nav-button-container"
          >
            <span
              aria-hidden="true"
              className="fa fa-arrow-left"
            />
            <div
              className="nav-item-link"
            >
              <div>
                Previous
              </div>
              <div
                className="nav-item-name"
              >
                 
              </div>
            </div>
          </div>
        </button>
        <button
          className="btn btn-link next"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="nav-button-container"
          >
            <span
              aria-hidden="true"
              className="fa fa-arrow-right"
            />
            <div
              className="nav-item-link"
            >
              <div>
                Next
              </div>
              <div
                className="nav-item-name"
              >
                 
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        aria-label="Second group"
        className="item-nav-right-group"
        role="group"
      >
        <ItemAccessibilityModal
          accResourceGroups={
            Array [
              Object {
                "accessibilityResources": Array [],
                "label": "none",
                "order": 1,
              },
            ]
          }
          onReset={[Function]}
          onSave={[Function]}
        />
      </div>
    </div>
    <ItemViewerFrame
      title="item viewer"
    />
  </div>
</div>
`;

exports[`ItemBankViewer with revision model matches snapshot 1`] = `
<div
  className="section revisions-items"
>
  <RevisionContainer
    onRevisionSelect={[Function]}
    revisions={Array []}
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    className="section item-map-iframe"
  >
    <ItemViewerFrame
      title="item viewer"
    />
  </div>
</div>
`;
